--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "discord.js": "^14.14.1",
-    "ical.js": "^1.5.0"
+    "ical.js": "^1.5.0",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   }
 }
