--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^14.14.1",
-    "ical.js": "^1.5.0"
+    "ical.js": "^1.5.0",
+    "node-ical": "^0.18.0"
   }
 }
